[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ddos-protection-python"
version = "1.0.0"
description = "A lightweight Python-based rate limiting and abuse protection system"
authors = [{ name = "Sasha Belanger" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["security", "rate-limiting", "ddos-protection", "defensive"]
