[metadata]
name = ddos-protection-python
version = 1.0.0
description = Defensive rate limiting and abuse protection utilities
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
python_requires = >=3.8
install_requires =
    # No external dependencies required